fixed slider margins to make values visible

--- a/tesla_ver/assets/layout.css
+++ b/tesla_ver/assets/layout.css
@@ -62,6 +62,8 @@
 #time-slider {
   display: flex;
   height: 10vh;
+  margin-right: 5vh;
+  margin-left: 5vh;
 }
 
 #dropdown_menus {
